# ln-scrapper

./: .gitignore  Cargo.toml  Demo_Sucess_830_jobs.csv  README.md  export_jobs.json  jobs_Success_909_jobs.csv  open_links.ps1  package.json  small_json_test.csv
js/: ln_scrapper.js
src/: code_gen_seq2.rs  code_gen_sequential.rs  main.rs
src/task_examples/: main_simplified.rs  url_decoder.rs
tests/: simple_semaphore.rs
