[package]
name = "ln-fq"
version = "0.1.0"
edition = "2021"

[[tests]]
path = "tests"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread", "sync","time"] }
rand = "0.8.5"
headless_chrome = "1.0.7"
